# dissertation

./: .env  .env.example  .gitignore  .ruff.toml  Makefile  README.md  app.py  bar_plot_usage.py  config.yaml  download_models.py  evaluations.ipynb  generate_vis.py  main.py  models_evaluations.ipynb  organize_results.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
app/: api_models.py  clients.py  config.py  data.py  dataset_loader.py  evaluations.py  evaluators.py  main.py  model_evaluator.py  models.py  retrievers.py  routes.py  utils.py  visualizations.py
app/evaluation_results/mistral-7b/: mistral-7b_ui_export_data.json
app/models/: evaluation.py
app/routes/: api.py  comparisons.py
app/static/: index.css  scripts.js
app/static/css/: base.css  comparison.css  evaluation.css  index.css  visualization.css
app/templates/: base.html  comparison.html  evaluation.html  index.html  visualization.html
app/utils/: preprocessor.py
app/visualizations/mistral-7b/: comparison_table.html
bleurt/: checkpoint.py  encoding.py  finetune.py  finetune_test.py  length_batching_test.py  model.py  score.py  score_files.py  score_files_test.py  score_not_eager_test.py  score_test.py
bleurt/lib/: bert_tokenization.py  experiment_utils.py  modeling.py  optimization.py  tokenizers.py
bleurt/wmt/: __init__.py  benchmark.py  db_builder.py  downloaders.py  evaluator.py
core/: config.py
data/: dataset_loader.py  preprocessor.py
evaluation/: bias_analysis.py  consistency.py  evaluator.py  hallucination.py  metrics.py
evaluation_results/mistral-7b/: mistral-7b_comprehensive_results.json
evaluations/: comparison_gpt-3.5-turbo_vs_gpt-4_med_qa_20250901_171212.json  comparison_gpt-3.5-turbo_vs_gpt-4_med_qa_20250901_172621.json  comparison_gpt-3.5-turbo_vs_gpt-4_med_qa_20250901_173826.json  comparison_gpt-3.5-turbo_vs_gpt-4_pubmed_qa_20250831_190058.json  comparison_gpt-3.5-turbo_vs_gpt-4_pubmed_qa_20250831_190101.json  comparison_gpt-3.5-turbo_vs_gpt-4_pubmed_qa_20250831_190104.json  comparison_gpt-3.5-turbo_vs_gpt-4_pubmed_qa_20250831_225134.json  comparison_gpt-3.5-turbo_vs_gpt-4_pubmed_qa_20250901_183947.json  comparison_llama-2-7b_vs_deepseek-7b_med_qa_20250901_220107.json  comparison_llama-2-7b_vs_deepseek-7b_med_qa_20250901_221942.json
models/: api_models.py  model_utils.py  opensource_models.py
static/: index.css  scripts.js
templates/: index.html
visualization/: bar_plots.py  heatmap.py  radar_plot.py  report_generator.py
(+18 files in other folders)
