[project]
    name = "dissertation-project-fastapi"
    authors = [
        { name = "Shahin Shapon", email = "ssheikhorg@hotmail.com" },
    ]
    version = "0.1.0"
    description = "MSc dissertation project for implementing a FastAPI application with Uvicorn"
    readme = "README.md"
    requires-python = ">=3.11"
    dependencies = [
    "accelerate>=1.10.0",
    "anthropic>=0.62.0",
    "bert-score>=0.3.13",
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "evaluation>=0.0.2",
    "fastapi[standard]>=0.116.1",
    "google-generativeai>=0.8.5",
    "huggingface-hub>=0.34.3",
    "matplotlib>=3.10.5",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "openai>=1.99.6",
    "pandas>=2.3.1",
    "peft>=0.17.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "spacy>=3.8.7",
    "tqdm>=4.67.1",
    "transformers>=4.55.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
    "uvicorn>=0.35.0",
]
